Make arrow a little bigger to avoid gap due to pixel rounding error

--- a/style/popup.less
+++ b/style/popup.less
@@ -9,8 +9,8 @@
 	position: absolute;
 
 	&-arrow {
-		width: 1rem;
-		height: 1rem;
+		width: 17px;
+		height: 17px;
 		position: absolute;
 		clip-path: polygon(50% 0%, 50% 0%, 100% 50%, 0% 50%);
 		// background-color set in preview.less
